fix: Smoother experience scrolling on mobile

--- a/experience-style.css
+++ b/experience-style.css
@@ -173,10 +173,12 @@ body {
 
 @media (max-width: 1000px) {
   #timeline {
+    height: 100vh;
     display: none;
   }
 
   #experience-list {
+    height: 100vh;
     width: 100%;
     left: 0;
 
